Fix bad button text alignment

--- a/Apresentacao/Paginas/GestorDeProducao/Armazem.razor.css
+++ b/Apresentacao/Paginas/GestorDeProducao/Armazem.razor.css
@@ -41,5 +41,6 @@ main {
 
 .action-buttons {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
